--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,3 +18,5 @@ jobs:
         uses: actions/checkout@v4
 
       - uses: DavidAnson/markdownlint-cli2-action@v20
+        with:
+          globs: '**/*.md'
